--- a/Visual Studio Drills/ChallengeWarCardGame/ChallengeWarCardGame/ChallengeWarCardGame.csproj
+++ b/Visual Studio Drills/ChallengeWarCardGame/ChallengeWarCardGame/ChallengeWarCardGame.csproj
@@ -80,6 +80,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Battle.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Default.aspx.cs">
